--- a/docs/2-literature/24-justice-esoms.tex
+++ b/docs/2-literature/24-justice-esoms.tex
@@ -82,7 +82,7 @@ will lead to greater procedural and recognitional justice outcomes as long as
 the policies maximize some measure of energy justice
 \cite{chapman_prioritizing_2018, heffron_resolving_2015}. However, these types
 of detailed analyses may also be used to dismiss concerns or opposition from the
-public due to insufficient `technical expertise' \cite{johnson_dakota_2021}.
+public due to insufficient `technical expertise' \cite{johnson_dakota_2021, susser_better_2022}.
 Further, without meaningful participation from the affected public, this
 approach further entrenches procedural injustices. To credit the energy modeling
 community, there is significant awareness of the importance of transparency and
@@ -102,18 +102,15 @@ frameworks do not offer computational resources to run their models. The
 \cite{temoa_project_temoa_2023}. However, the responsibility for creating an
 input file still falls to the user, which can be overwhelming even for
 experienced modelers. 
-
-\textcolor{red}{This section should also evaluate whether the current literature
-focuses only on the ``skill'' barriers to energy modeling or if it recognizes
-structural/political barriers to meaningful energy modeling.}
-
-\textcolor{red}{This section still works. But the section above should include a
-review of studies that looked at bridging the gap between models and their users.}
-
-Some studies investigated the potential for enhancing
-procedural justice through direct collaboration between energy modelers and
-communities themselves. The next section describes these efforts.
-
+For this reason, many municipalities hire external organizations to run models
+since cities and towns typically do not have the capacity to do it themselves
+\cite{ben_amer_too_2020, johannsen_designing_2021}. Additionally, researchers
+identified gaps between the needs of modelers and users, such as the inflexibility
+of models to reflect multiple policy options. ``Many models include a carbon price,
+often labelled as `climate policy,' as the only explicit policy instrument'' 
+\cite{susser_better_2022}. Despite broad agreement about the need to incorporate
+stakeholders the ``process'' of modeling, there have been surprisingly limited
+efforts so far \cite{ben_amer_too_2020,johannsen_designing_2021,susser_better_2022}
 Finally, it's not clear that perfectly accessible and transparent modeling tools
 will translate to more procedurally just policy-making. The next sections
 outline some methods used to address this challenge.
@@ -145,13 +142,36 @@ decision-making and participation was meaningful for the majority of subjects
 \cite{mouter_including_2021}. Although previous applications of \ac{pve} focused
 on economic policy levers, this approach offers a promising pathway toward
 identifying equitable and just energy mixes for the future.
+The next section reviews some efforts to enhance outcomes via direct collaboration 
+between energy modelers and communities themselves.
 
 \subsection{Participatory modeling processes}
 
 Although \ac{pve} offers one method to elicit stakeholder input, researchers are
 beginning to explore transdisciplinary methods for engaging members of the public.
-McGookin et al. 2021 \cite{mcgookin_participatory_2021} systematically reviewed 
-existing literature on participatory energy modeling.
+McGookin et al. 2021 \cite{mcgookin_participatory_2021} systematically reviewed (``the review'') 
+existing literature on participatory energy modeling. The review found a major
+difference in goals for studies in either national or local contexts. Studies involving
+participants on a national scale
+
+Benefits of participatory energy modeling:
+\begin{enumerate}
+    \item Legitimacy and robustness --- discussion and tradeoff analysis lead to
+    solutions which are more socially and politically feasible.
+    \item Capacity building --- non-academic participants benefit from learning new
+    tools, and modelers gain new perspectives and a better understanding of a community's
+    reality.
+    \item Consensus building 
+\end{enumerate}
+
+Although the review doesn't explicitly identify these benefits with energy justice.
+The benefits of particpatory energy modeling evinced by the literature are well 
+aligned with both procedural and recognition justice. Further, only one of the apep
+
+
+The authors found that \acp{esom}, coupled with \ac{mcda}, were the most popular 
+quantitative tools used in the literature. \Ac{mcda} is a tool used to analyze 
+tradeoffs among different scenarios. 
 
 The authors proposed a conceptual framework for successful integration of 
 participatory methods.
@@ -167,22 +187,6 @@ participatory methods.
 Do the authors indicate why it's better to include this, beyond the ``usefulness''
 of `social intelligence?'
 
-Benefits of participatory energy modeling:
-\begin{enumerate}
-    \item Legitimacy and robustness --- discussion and tradeoff analysis lead to
-    solutions which are more socially and politically feasible.
-    \item Capacity building
-    \item Consensus building 
-\end{enumerate}
-
-Although the review doesn't explicitly identify these benefits with energy justice.
-The benefits of particpatory energy modeling evinced by the literature are well 
-aligned with both procedural and recognition justice. Further, only one of the apep
-
-
-The authors found that \acp{esom}, coupled with \ac{mcda}, were the most popular 
-quantitative tools used in the literature. \Ac{mcda} is a tool used to analyze 
-tradeoffs among different scenarios. 
 
 Persistent gaps
 
@@ -368,6 +372,6 @@ to bridge the gap between energy system modeling and energy justice by
 developing a novel framework that allows multiple, and perhaps non-economic,
 objectives and is designed for transparency and usability by non-modelers to
 inform energy policy decisions. A framework such as the one developed in this
-thesis may be used in conjunction with a policy process like \ac{pve} to fully
-enclose the triumvirate of energy justice tenets: distribution, procedure, and
-recognition.
+thesis may be used in conjunction with a policy process like \ac{pve} or
+participatory modeling to fully enclose the triumvirate of energy justice
+tenets: distribution, procedure, and recognition.
