--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -62,4 +62,5 @@
 \acrodefplural{lib}[LiBs]{lithium-ion batteries}
 \acro{reason}[RE$^3$ASON]{Renewable Energies and Energy Efficiency Analysis and System Optimization}
 \acro{mavt}[MAVT]{multi-attribute value theory}
-\acro{mcda}[MCDA]{multi-criteria decision analysis}.
+\acro{mcda}[MCDA]{multi-criteria decision analysis}
+\acro{ngo}[NGO]{non-governmental organization}
