finishes the participatory modeling section

--- a/docs/2-literature/22-moop.tex
+++ b/docs/2-literature/22-moop.tex
@@ -194,13 +194,13 @@ in Table \ref{tab:moop-literature} developed a framework. Prina et al. 2020
 \cite{prina_multi-objective_2020} developed a bespoke and unlicensed model
 called ``Oemof-moea,'' and Prina et al. 2018 \cite{prina_multi-objective_2018}
 and Johannsen et al. 2023 \cite{johannsen_municipal_2023} developed a \ac{moo}
-wrapper for the \texttt{EnergyPLAN} model called \texttt{EPLANopt}, but none of
+wrapper for the \texttt{EnergyPLAN} model called \texttt{EPLANopt}, but neither of
 these examples constitute a framework. The studies in \ref{tab:moop-literature}
 used at most three modeled
 objectives\cite{riou_multi-objective_2021,de-leon_almaraz_deployment_2015,
 de-leon_almaraz_assessment_2013}. None of the studies in Table
-\ref{tab:moop-literature} allow arbitrary user-defined objectives. None of the
-studies incorporate social metrics into the modeled objectives. While some
+\ref{tab:moop-literature} allow arbitrary user-defined objectives nor did they 
+incorporate social metrics into the modeled objectives. While some
 studies investigated energy systems at city-scale or smaller
 \cite{riou_multi-objective_2021,
 mayer_environmental_2020,fleischhacker_portfolio_2019,johannsen_municipal_2023},
