--- a/docs/2-literature/24-justice-esoms.tex
+++ b/docs/2-literature/24-justice-esoms.tex
@@ -165,8 +165,8 @@ The review offered three overarching benefits of participatory modeling. First,
 involving more stakeholders improves perceptions of legitimacy and robustness
 \cite{mcgookin_participatory_2021}. Discussion and tradeoff analysis lead to
 solutions which are more socially and politically feasible. This corroborates
-findings from social movement theory which show that support for energy policies
-and projects are conditioned on genuine public participation rather than
+literature from social movement theory which show that support for energy policies
+and projects is conditioned on genuine public participation rather than
 \ac{nimby} sentiments \cite{summers_influencing_2020,ottinger_procedural_2014,
 walker_procedural_2017,barragan-contreras_procedural_2022,gonyo_resident_2021,konisky_proximity_2021}.
 McGookin et al. also indicate that transparency in the model assumptions builds
@@ -190,7 +190,7 @@ owned solutions was effective for building trust. Both national and local
 studies found increased commitments for stakeholders to implement co-created
 decisions \cite{mcgookin_participatory_2021}. These findings support greater
 participation in a ``deliberative democracy'' \cite{dryzek_deliberative_2013}.
-Although the review doesn't explicitly identify these benefits with energy
+While the review does not explicitly identify these benefits with energy
 justice. The benefits of particpatory energy modeling evinced by the literature
 are consistent with both procedural and recognition justice.
 
