--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 \chapter{Literature Review}
 \label{chapter:lit-review}
-\input{2-literature/20-literature}
+% \input{2-literature/20-literature}
 
 \chapter{\acf{osier}}
 \label{chapter:osier}
