--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -11,33 +11,33 @@
 \chapter{Benchmark Results}
 \label{chapter:benchmark-results}
 
-% \textcolor{red}{This chapter will remain largely unchanged except for maybe one
-% additional example, demonstrating a different dispatch model that is much faster
-% but less robust. This new dispatch model will be used in the following chapter
-% where I investigate further examples including a hypothetical ``data center''
-% and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
+\textcolor{red}{This chapter will remain largely unchanged except for maybe one
+additional example, demonstrating a different dispatch model that is much faster
+but less robust. This new dispatch model will be used in the following chapter
+where I investigate further examples including a hypothetical ``data center''
+and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
 
-% \section{Exercise 0: Demonstrating \ac{osier}}
-% \textcolor{red}{This section is new in the dissertation!}
+\section{Exercise 0: Demonstrating \ac{osier}}
+\textcolor{red}{This section is new in the dissertation!}
 
-% This section demonstrates some of the basic features of Osier. This section should be based 
-% on the examples in \ac{osier}'s documentation.
+This section demonstrates some of the basic features of Osier. This section should be based 
+on the examples in \ac{osier}'s documentation.
 
-% \section{Exercise 1: Deciding Among Evolutionary Algorithms}
+\section{Exercise 1: Deciding Among Evolutionary Algorithms}
 
-% \textit{Already written in prelim document.}
+\textit{Already written in prelim document.}
 
-% \section{Exercise 2: Exploring objective space}
+\section{Exercise 2: Exploring objective space}
 
-% \textit{Already written in prelim document.}
+\textit{Already written in prelim document.}
 
-% \section{Exercise 3: Four Simultaneous Objectives}
+\section{Exercise 3: Four Simultaneous Objectives}
 
-% \textit{Already written in prelim document.}
+\textit{Already written in prelim document.}
 
-% \section{Exercise 4: Validating a Simplified Approach}
+\section{Exercise 4: Validating a Simplified Approach}
 
-% \textcolor{red}{This section is new in the dissertation.}
+\textcolor{red}{This section is new in the dissertation.}
 
 \chapter{Examples with \acs{osier}}
 \label{chapter:examples}
