consolidates citation brackets

--- a/docs/2-literature/23-social-movements.tex
+++ b/docs/2-literature/23-social-movements.tex
@@ -6,11 +6,10 @@ Risk is generally understood as the ``potential for adverse consequences''
 the \ac{ipcc} developed a three-tenet framework to discuss risk
 \cite{reisinger_concept_2020}: hazard, exposure, and vulnerability.
 \textit{Hazards} are mediated by physical features, such as climate and
-topography \cite{dorkenoo_critical_2022, simpson_framework_2021}.  Climate
+topography \cite{dorkenoo_critical_2022,simpson_framework_2021}.  Climate
 change is already producing more significant hazards, like forest fires,
 hurricanes, storms, floods, droughts, and heat waves
-\cite{reidmiller_fourth_2018,
-intergovernmental_panel_on_climate_change_climate_2021, dahl_killer_2019}.
+\cite{reidmiller_fourth_2018,intergovernmental_panel_on_climate_change_climate_2021,dahl_killer_2019}.
 \textit{Exposure} refers to the scale and duration of the subjection of people,
 infrastructure, and social wealth to a particular hazard
 \cite{simpson_framework_2021,reisinger_concept_2020,li_understanding_2021}.
