fixes table float

--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -24,6 +24,7 @@
 % \include{acros}
 
 \usepackage{float}
+\usepackage{placeins}
 \usepackage{booktabs}
 \usepackage{colortbl}
 \usepackage{xltabular}
