--- a/docs/2-literature/25-energy-justice.tex
+++ b/docs/2-literature/25-energy-justice.tex
@@ -8,20 +8,18 @@
 Energy justice is a conceptual and analytical tool regarding the ethical or
 normative dimensions of energy systems and addresses the systemic causes of
 burdens, and inequities \cite{sovacool_energy_2015}.
-
 % \begin{enumerate} \item What is justice?
-    
     There are many conceptions of justice; however, the most popular framework
     for understanding justice is a three-faceted approach originating from David
-    Schlosberg: distributional, recognitional, and procedural justice
+    Schlosberg: distributive, recognition, and procedural justice
     \cite{schlosberg_2_2007}.
-    % \item What is distributional justice? 
+    % \item What is distributive justice? 
 % \noindent\hrulefill
-    Distributional justice relates to the fair distribution of resources,
-    burdens, and responsibilities. Studies on distributional justice seek to
+    Distributive justice relates to the fair distribution of resources,
+    burdens, and responsibilities. Studies on distributive justice seek to
     address the normative question: how should a just society distribute the
     benefits it produces and \textit{the burdens required to maintain it}
-    \cite{brighouse_justice_2004}. Additionally, distributional justice
+    \cite{brighouse_justice_2004}. Additionally, distributive justice
     considers \textit{how} poor distributions are created
     \cite{schlosberg_2_2007}.
 % \noindent\hrulefill
@@ -34,11 +32,11 @@ burdens, and inequities \cite{sovacool_energy_2015}.
     impartiality, and avenues for redress \cite{sovacool_energy_2015}.    
 % \noindent\hrulefill
     % \item What is recognition justice?
-Justice of recognition is the vaguest of the three tenets of justice and is
-    frequently reduced to a component of either distribution or procedural
+Justice of recognition is the most vague of the three tenets of justice and is
+    frequently reduced to a component of either distributive or procedural
     justice \cite{schlosberg_2_2007, van_uffelen_revisiting_2022}. A common
     argument for this consolidation is that recognition is a precondition for
-    achieving distributional justice or that achieving procedural justice
+    achieving distributive justice or that achieving procedural justice
     necessarily includes recognition \cite{schlosberg_2_2007}. However,
     recognition is unique from distributive and procedural justices because it
     is concerned with a different family of injustice, namely,
@@ -65,9 +63,9 @@ recommendations. For example, due to the psychological pressures introduced by a
 lack of access to energy, either due to infrastructure or cost, interrupts
 relational well-being and is an injustice \cite{van_uffelen_revisiting_2022}.
 Further, (un)sustainable policies may be considered a misrecognition of the
-humanity of future generations.
-
-\textcolor{black}{Next, I examine the specific ways the social science literature understands how energy systems and their infrastructure (artifacts) contribute to the distribution of burdens.}
+humanity of future generations. Next, I examine the specific ways the social
+science literature understands how energy systems and their infrastructure
+(artifacts) contribute to the distribution of burdens.
 
 % \noindent\hrulefill \item What is an energy system?
 \subsection{Boundaries of Energy Systems}
@@ -90,15 +88,16 @@ The second subset of the literature focuses on the process of energy
 infrastructure development and how these processes create social inequities. For
 example, energy policies that subsidize residential solar panels have not led to
 more equitable adoption of solar energy, with greater adoption in areas with
-higher income, among other social indicators \cite{reames_distributional_2020}.
+higher income, among other social indicators \cite{reames_distributive_2020}.
 Other popular arguments in favor of renewable energy assert that these energy
 sources are necessarily more egalitarian because the Sun and the wind cannot be
 (or have not yet been) privatized. Another is the urgency of climate change.
-Although these arguments have merit, they ignore or minimize the potential environmental and social
-consequences of energy planning that does not consider energy justice
-\cite{jones_building_2013}. Large-scale energy projects in the Global South have
-already led to the dispossession of nearby indigenous communities and other key
-actors \cite{yenneti_spatial_2016, barragan-contreras_procedural_2022}.
+Although these arguments have merit, they ignore or minimize the potential
+environmental and social consequences of energy planning that does not consider
+energy justice \cite{jones_building_2013}. Large-scale energy projects in the
+Global South have already led to the dispossession of nearby indigenous
+communities and other key actors \cite{yenneti_spatial_2016,
+barragan-contreras_procedural_2022}.
 
 Third, the development of energy infrastructure is not simply conducted via
 policy measures, but also in the manner governments activate the public
@@ -130,9 +129,12 @@ through which new political identities may evolve \cite{bridge_energy_2018}.
 From these various perspectives, we can observe that confining an energy system
 to its technical characteristics is woefully incomplete. I propose that an
 energy system is a spatially, temporally, and topologically complex machine that
-coordinates the supply and demand of energy and resources and acts as an important mediator of
-burdens that influence risks (such as risks from climate change). This thesis takes the important step
-of analyzing energy system planning and policy with this expanded definition.
+coordinates the supply and demand of energy and resources and acts as an
+important mediator of burdens that influence risks (such as risks from climate
+change). This thesis takes the important step of analyzing energy system
+planning and policy with this expanded definition. The next section reviews
+current attempts to model energy systems and identifies gaps in conventional
+methods.
 
 % \textcolor{red}{Climate change \textit{is} a complex issue with multiple
 % interacting and interwoven layers. However, it can and must be understood
@@ -160,5 +162,3 @@ of analyzing energy system planning and policy with this expanded definition.
 
 % Att
 
-The next section reviews current attempts to model energy systems and identifies
-gaps in conventional methods.
