--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -18615,7 +18615,7 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	editor = {Neufeld, Janis S. and Buscher, Udo and Lasch, Rainer and Möst, Dominik and Schönberger, Jörn},
 	date = {2020},
 	langid = {english},
-	keywords = {Mixed-integer linear optimization, Renewable energy potentials, Urban energy systems},
+	keywords = {Urban energy systems, Mixed-integer linear optimization, Renewable energy potentials},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/NE4SE435/Mainzer - 2020 - Analysis and Optimization of Urban Energy Systems.pdf:application/pdf},
 }
 
@@ -18632,6 +18632,22 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	author = {Knudsen, Jørgen K. and Wold, Line Camilla and Aas, Øystein and Kielland Haug, Jens Jacob and Batel, Susana and Devine-Wright, Patrick and Qvenild, Marte and Jacobsen, Gerd B.},
 	urldate = {2025-02-23},
 	date = {2015-11-01},
-	keywords = {Communication, Consultation, Involvement, Participation, Procedural justice, Public engagement, Sustainable grid development},
+	keywords = {Procedural justice, Participation, Communication, Public engagement, Consultation, Involvement, Sustainable grid development},
 	file = {Full Text:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/WVD5QNNQ/Knudsen et al. - 2015 - Local perceptions of opportunities for engagement and procedural justice in electricity transmission.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/IHI9IS3G/S0264837715001751.html:text/html},
+}
+
+@incollection{hands_positive-normative_2012,
+	location = {Amsterdam},
+	title = {The Positive-Normative Dichotomy and Economics},
+	url = {https://www.sciencedirect.com/science/article/pii/B9780444516763500099},
+	series = {Handbook of the Philosophy of Science},
+	pages = {219--239},
+	booktitle = {Philosophy of Economics},
+	publisher = {North-Holland},
+	author = {Hands, D. Wade},
+	editor = {Mäki, Uskali},
+	urldate = {2025-03-14},
+	date = {2012-01-01},
+	doi = {10.1016/B978-0-444-51676-3.50009-9},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/4XTQT74A/Hands - 2012 - The Positive-Normative Dichotomy and Economics.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/RCM4WIQ7/B9780444516763500099.html:text/html},
 }
