--- a/docs/2-literature/21-esoms.tex
+++ b/docs/2-literature/21-esoms.tex
@@ -1,32 +1,32 @@
 \section{Modeling Energy Systems}
 \label{section:esoms}
 
-\Acp{esom} have broad utility, including forecasting future quantities,
-generating insight for policy development, or energy system planning for
-scheduling and acquisition \cite{decarolis_using_2011, yue_review_2018}.
-However, analyses using currently available \acp{esom} seldom consider the role
-of energy systems in creating and maintaining inequitable distributions of
-burdens. \acp{esom} vary significantly by the energy sectors they choose to
-model, the degree of physical detail, uncertainty quanitification, and
-forecasting capabilities. Table \ref{tab:esoms} summarizes the capabilities for
-a comprehensive list of energy system analysis tools. These tools are
-approximately sorted by mathematical formulation, e.g. explicit optimization or
-simulation. The ``\ac{milp}'' column indicates whether the framework uses a
-linear-programming approach to optimize an objective function. The ``objective''
-column specifies the nature of the objective function if one exists. ``Cost''
-objectives minimize total or annual energy costs, while ``welfare'' maximizes
-social welfare. Some entries have more than one objective listed. This means
-users may choose which objective to optimize. None of the tools in Table
-\ref{tab:esoms} are designed to handle simultaneous optimization (i.e.,
-\ac{moo}). For those modeling frameworks that have an ``objective'' in Table
-\ref{tab:esoms}, virtually all of them optimize system costs. EnergyScope is the
-only exception to this, which allows users to optimize \ac{ghg} emissions
-\cite{limpens_energyscope_2019}. \textcolor{black}{The ``uncertainty'' column
-indicates a feature to algorithmically generate model runs for testing either
-parametric or structural uncertainties. \textcolor{black}{For example,
-EnergyScope is \textit{suitable} for uncertainty analysis (i.e., many runs are
-computationally tractable) but does not have any built-in capabilities
-\cite{limpens_energyscope_2019}.} Some tools, such as NEMS
+Energy system optimization models (ESOMs)\acused{esom} have broad utility,
+including forecasting future quantities, generating insight for policy
+development, or energy system planning for scheduling and acquisition
+\cite{decarolis_using_2011, yue_review_2018}. However, analyses using currently
+available \acp{esom} seldom consider the role of energy systems in creating and
+maintaining inequitable distributions of burdens. \acp{esom} vary significantly
+by the energy sectors they choose to model, the degree of physical detail,
+uncertainty quanitification, and forecasting capabilities. Table \ref{tab:esoms}
+summarizes the capabilities for a comprehensive list of energy system analysis
+tools. These tools are approximately sorted by mathematical formulation, e.g.
+explicit optimization or simulation. The ``\ac{milp}'' column indicates whether
+the framework uses a linear-programming approach to optimize an objective
+function. The ``objective'' column specifies the nature of the objective
+function if one exists. ``Cost'' objectives minimize total or annual energy
+costs, while ``welfare'' maximizes social welfare. Some entries have more than
+one objective listed. This means users may choose which objective to optimize.
+None of the tools in Table \ref{tab:esoms} are designed to handle simultaneous
+optimization (i.e., \ac{moo}). For those modeling frameworks that have an
+``objective'' in Table \ref{tab:esoms}, virtually all of them optimize system
+costs. EnergyScope is the only exception to this, which allows users to optimize
+\ac{ghg} emissions \cite{limpens_energyscope_2019}. \textcolor{black}{The
+``uncertainty'' column indicates a feature to algorithmically generate model
+runs for testing either parametric or structural uncertainties.
+\textcolor{black}{For example, EnergyScope is \textit{suitable} for uncertainty
+analysis (i.e., many runs are computationally tractable) but does not have any
+built-in capabilities \cite{limpens_energyscope_2019}.} Some tools, such as NEMS
 \cite{nalley_national_2019}, incorporate uncertainty into their calculations via
 learning curves. However, these learning curves require assumptions about
 learning factors and technological ``optimism'' --  which are themselves
@@ -85,7 +85,7 @@ analysis is rendered impossible.
     \label{tab:esoms}
     \resizebox*{\textwidth}{0.95\textheight}{\input{tables/esom_database.tex}}
 \end{table}
-
+\FloatBarrier
 
 % \begin{itemize} \item METIS has the following motivation
 %     \cite{sakellaris_metis_2018} \begin{enumerate} \item Close the gap between
@@ -251,7 +251,7 @@ results are presented without a corresponding normative conclusion. The same
 could be said for any choice in the development of an \ac{esom}: Spatial scale,
 time scale, which technologies are included in the model, and more. Chapter
 \ref{chapter:modeling-theory} expands on all three forms of uncertainty and
-introduces a conceptual framework for understanding the modeling process
-through the lens of these these uncertainties. 
+introduces a conceptual framework for understanding the modeling process through
+the lens of these these uncertainties. 
 
 
