--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -64,3 +64,5 @@
 \acro{mavt}[MAVT]{multi-attribute value theory}
 \acro{mcda}[MCDA]{multi-criteria decision analysis}
 \acro{ngo}[NGO]{non-governmental organization}
+\acro{co2}[CO$_2$]{carbon dioxide}
+\acro{co2eq}[CO$_2$-eq]{CO$_2$-equivalent}
