reorganizes benchmark chapter

--- a/docs/4-benchmark-results/40-benchmark.tex
+++ b/docs/4-benchmark-results/40-benchmark.tex
@@ -14,8 +14,14 @@ a more established \ac{esom}, \ac{temoa}. Lastly, it demonstrates some of
 \ac{osier}'s advanced features, such as many-objective objective problems and
 combining \ac{moo} with \ac{mga}.
 
+\section{Technology Data}
+\input{4-benchmark-results/40-1-technology-data}
+\section{Demonstrate \ac{osier}}
+\subsection{Data for demonstration problems}
 \input{4-benchmark-results/41-demonstrate}
+\input{4-benchmark-results/45-new-dispatch}
+\section{Benchmark \ac{osier}}
+\input{4-benchmark-results/42-1-benchmark-data}
 \input{4-benchmark-results/42-decide-ea}
 \input{4-benchmark-results/43-explore}
 \input{4-benchmark-results/44-four-obj}
-\input{4-benchmark-results/45-new-dispatch}
