--- a/docs/4-benchmark-results/41-demonstrate.tex
+++ b/docs/4-benchmark-results/41-demonstrate.tex
@@ -1,4 +1,4 @@
-\section{Exercise 0: Demonstrating \ac{osier}}
+\subsection{Exercise 0: Demonstrating \ac{osier}}
 \textcolor{red}{This section is new in the dissertation!}
 
 This section demonstrates some of the basic features of Osier. This section should be based 
