--- a/docs/4-benchmark-results/42-decide-ea.tex
+++ b/docs/4-benchmark-results/42-decide-ea.tex
@@ -1,4 +1,4 @@
-\section{Exercise 1: Deciding Among Evolutionary Algorithms}
+\subsection{Exercise 1: Deciding Among Evolutionary Algorithms}
 
 \ac{osier} allows users to choose among a variety of \ac{moo} methods. This is
 motivated by the desire for flexibility. However, Exercises 1 and 2 use just one
@@ -35,4 +35,4 @@ will be used for the remaining exercises for its faster convergence.
   \label{fig:algorithm-comparison}
 \end{figure}
 
-
+\FloatBarrier
