--- a/docs/4-benchmark-results/43-explore.tex
+++ b/docs/4-benchmark-results/43-explore.tex
@@ -1,4 +1,4 @@
-\section{Exercise 2: Exploring objective space}
+\subsection{Exercise 2: Exploring objective space}
 Since structural uncertainty persists regardless of the number of objectives
 used, it's important to check the near-optimal objective space for alternative
 solutions. In the first benchmark exercise, I used \ac{temoa} to calculate the
