--- a/docs/4-benchmark-results/44-four-obj.tex
+++ b/docs/4-benchmark-results/44-four-obj.tex
@@ -1,5 +1,5 @@
 
-\section{Exercise 3: Four Simultaneous Objectives}
+\subsection{Exercise 3: Four Simultaneous Objectives}
 Chapter \ref{chapter:lit-review} showed that conventional \acp{esom} virtually
 always model a single objective and that objective is uniformly cost (or a
 similar aggregated economic indicator). Further, Section
