--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -66,3 +66,4 @@
 \acro{ngo}[NGO]{non-governmental organization}
 \acro{co2}[CO$_2$]{carbon dioxide}
 \acro{co2eq}[CO$_2$-eq]{CO$_2$-equivalent}
+\acro{unece}[UNECE]{United Nations Economic Commission for Europe}
