updates snakefile and plot

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -1,4 +1,10 @@
 \chapter{Introduction}
+
+% \section{Research Objectives}
+
+% \section{Reproducing this work}
+% Talk about \texttt{snakemake}, show the DAG... 
+
 \chapter{Literature Review}
 \label{chapter:lit-review}
 % \input{2-literature/20-literature}
