updates temoa comparison plots

--- a/docs/4-benchmark-results/43-explore.tex
+++ b/docs/4-benchmark-results/43-explore.tex
@@ -54,7 +54,8 @@ solutions (green) and some randomly selected points, highlighted in red.
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.6\columnwidth]{figures/results/osier_mga_subset_01.png}
+  \resizebox{0.6\columnwidth}{!}{\input{figures/results/osier_mga_subset_01.pgf}}
+  % \includegraphics[width=0.6\columnwidth]{figures/results/osier_mga_subset_01.png}
   % \resizebox{0.6\columnwidth}{!}{\input{figures/results/osier_mga_subset_01.png}}
   \caption{Points within \ac{osier}'s sub-optimal space.}
   \label{fig:temoa-benchmark-02}
