creates new folder for ch4 figures

--- a/docs/4-benchmark-results/43-explore.tex
+++ b/docs/4-benchmark-results/43-explore.tex
@@ -12,7 +12,7 @@ within 10\% of any objective) for \ac{temoa} and \ac{osier}, respectively.
 \begin{figure}[h]
   \centering
   % \resizebox{0.6\columnwidth}{!}{\input{figures/results/temoa_osier_benchmark_01.pgf}}
-  \resizebox{0.6\columnwidth}{!}{\input{figures/temoa_osier_benchmark_01.pgf}}
+  \resizebox{0.75\columnwidth}{!}{\input{figures/04_benchmark_chapter/temoa_osier_benchmark_01.pgf}}
   \caption{Compares the least-cost solutions between \acs{temoa}
   and \acs{osier} as well as their sub-optimal spaces. The least-cost solutions
   for \ac{osier} and \ac{temoa} are within 0.5\% of each other.}
@@ -54,7 +54,7 @@ solutions (green) and some randomly selected points, highlighted in red.
 
 \begin{figure}[h]
   \centering
-  \resizebox{0.6\columnwidth}{!}{\input{figures/results/osier_mga_subset_01.pgf}}
+  \resizebox{0.75\columnwidth}{!}{\input{figures/04_benchmark_chapter/osier_mga_subset_01.pgf}}
   % \includegraphics[width=0.6\columnwidth]{figures/results/osier_mga_subset_01.png}
   % \resizebox{0.6\columnwidth}{!}{\input{figures/results/osier_mga_subset_01.png}}
   \caption{Points within \ac{osier}'s sub-optimal space.}
@@ -84,7 +84,7 @@ region. This suggests one avenue for improving \ac{osier}.
 \newpage
 \begin{figure}[ht!]
   \centering
-  \resizebox{\columnwidth}{!}{\input{figures/results/temoa_osier_mga_comparison1x3.pgf}}
+  \resizebox{\columnwidth}{!}{\input{figures/04_benchmark_chapter/temoa_osier_mga_comparison1x3.pgf}}
   \caption{The design spaces for a) points on the Pareto-front in Figure
   \ref{fig:temoa-benchmark-01}, b) selected points in \ac{osier}'s sub-optimal
   space, identified in Figure \ref{fig:temoa-benchmark-02}, and c) points
@@ -99,3 +99,5 @@ region. This suggests one avenue for improving \ac{osier}.
 % offers one possible explanation for this technology since states with
 % significant natural gas resources might seek to maintain their influence by
 % developing low-carbon technology that still uses natural gas.
+ 
+\FloatBarrier
