--- a/docs/2-literature/21-esoms.tex
+++ b/docs/2-literature/21-esoms.tex
@@ -132,7 +132,7 @@ illustrated in Figure \ref{fig:social-max}.
 
 \begin{figure}[H]
   \centering
-  \resizebox{\columnwidth}{!}{\input{figures/social_max.pgf}}
+  \resizebox{\columnwidth}{!}{\input{figures/02_literature_review/social_max.pgf}}
   \caption{Demonstration of ``social welfare maximization.'' Plot a) shows the
   total surplus when the price is at equilibrium. Plot b) shows the total
   surplus when the price is artificially depressed.}
@@ -157,7 +157,7 @@ labandeira_meta-analysis_2017, csereklyei_price_2020}. Figure
 
 \begin{figure}[H]
   \centering
-  \resizebox{\columnwidth}{!}{\input{figures/elasticity.pgf}}
+  \resizebox{\columnwidth}{!}{\input{figures/02_literature_review/elasticity.pgf}}
   \caption{Demonstration of ``price elasticity.'' Plot a) shows a typical supply-demand curve where changes in price lead to proportional changes in demand. Plot b) shows an inelastic demand where consumption does not change proportionally with price.}
   \label{fig:inelastic}
 \end{figure}
