--- a/docs/2-literature/22-moop.tex
+++ b/docs/2-literature/22-moop.tex
@@ -31,7 +31,7 @@ an example problem from \ac{pymoo}
 
 \begin{figure}[H]
   \centering
-  \resizebox{0.6\columnwidth}{!}{\input{figures/truss2d_pareto.pgf}} \caption{An
+  \resizebox{0.6\columnwidth}{!}{\input{figures/02_literature_review/truss2d_pareto.pgf}} \caption{An
   example \textit{convex} Pareto-front from \acs{pymoo} \cite{blank_pymoo_2020,
   deb_omni-optimizer_2008}.}
   \label{fig:truss-pareto}
@@ -132,7 +132,7 @@ Pareto-front from Figure \ref{fig:truss-pareto}.
 
 \begin{figure}[H]
   \centering
-  \resizebox{0.6\columnwidth}{!}{\input{figures/near-optimal-pareto.pgf}}
+  \resizebox{0.6\columnwidth}{!}{\input{figures/02_literature_review/near-optimal-pareto.pgf}}
   \caption{The near-optimal space around the Pareto-front.}
   \label{fig:near-opt-pareto}
 \end{figure}
