--- a/docs/2-literature/23-social-movements.tex
+++ b/docs/2-literature/23-social-movements.tex
@@ -62,7 +62,7 @@ change mitigation.
 
 \begin{figure}
     \centering
-    \includegraphics{figures/simpson-risk-framework.jpg}
+    \includegraphics{figures/02_literature_review/simpson-risk-framework.jpg}
     \caption{A framework for decomposing risk into its parts: hazard, exposure,
     vulnerability, and response, using risk to infrastructure as an illustrative
     example. Reproduced from Simpson et al. (2021)
@@ -72,7 +72,7 @@ change mitigation.
 
 \begin{figure}
     \centering
-    \includegraphics[width=\columnwidth]{figures/risk-response.png}
+    \includegraphics[width=\columnwidth]{figures/02_literature_review/risk-response.png}
     \caption{A categorization typology for various responses to climate risks.
     Reproduced from Paterson et al. (2019)
     \cite{paterson_community-based_2019}.}
@@ -169,7 +169,7 @@ normative questions about alternative distributions
 
 \begin{figure}
     \centering
-    \includegraphics[width=\columnwidth]{figures/dorkenoo-disproportionality.jpg}
+    \includegraphics[width=\columnwidth]{figures/02_literature_review/dorkenoo-disproportionality.jpg}
     \caption{The relationships among risks, impacts, and burdens. Reproduced
     from Dorkenoo et al. (2022) \cite{dorkenoo_critical_2022}.}
     \label{fig:risk-impact-burden}
