--- a/docs/3-osier/30-intro.tex
+++ b/docs/3-osier/30-intro.tex
@@ -6,7 +6,7 @@ framework for \acl{moo} \cite{dotson_osier_2024}. There are currently no
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\columnwidth]{figures/osier_flow}
+    \includegraphics[width=\columnwidth]{figures/03_osier_chapter/osier_flow}
     \caption{The flow of data into and within \ac{osier}}
     \label{fig:osier_flow}
 \end{figure}
