--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -7,11 +7,11 @@
 
 \chapter{Literature Review}
 \label{chapter:lit-review}
-% \input{2-literature/20-literature}
+\input{2-literature/20-literature}
 
 \chapter{\acf{osier}}
 \label{chapter:osier}
-% \input{3-osier/30-intro}
+\input{3-osier/30-intro}
 
 
 \chapter{Benchmark Results}
