adds 4 objective analysis script

--- a/docs/4-benchmark-results/43-explore.tex
+++ b/docs/4-benchmark-results/43-explore.tex
@@ -6,8 +6,13 @@ least-cost solution. Then I generated 30 alternative solutions with \ac{mga} as
 described in Section \ref{section:mga} with a 10\% slack variable added to
 \ac{temoa}'s objective function. Figure \ref{fig:temoa-benchmark-01} shows the
 points from \ac{temoa} in red and \ac{osier}'s Pareto-front for the same problem
-in blue. The red- and blue-shaded regions are the sub-optimal spaces (i.e.,
+in black. The red- and gray-shaded regions are the sub-optimal spaces (i.e.,
 within 10\% of any objective) for \ac{temoa} and \ac{osier}, respectively.
+The solid black points indicates points along the Pareto-front, while the open
+black points are points tested in early generations of the \ac{osier} simulation.
+\footnote{There are many more tested points than shown in Figure \ref{fig:temoa-benchmark-01}. 
+For simplicity and clarity, Figure \ref{fig:temoa-benchmark-01} shows a random subset
+of points.}
 
 \begin{figure}[h]
   \centering
