begins adding rule to make sample mga plot

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -1,5 +1,11 @@
 \chapter{Introduction}
 
+% \section{Motivation}
+
+% \textcolor{red}{CO2 emissions}
+
+% \textcolor{red}{Emissions by energy source}
+
 % \section{Research Objectives}
 
 % \section{Reproducing this work}
